# TurboHiker2

./: .clang-format  CMakeLists.txt  README.md  build.sh  game_configurations.ini  run.sh
doxygen/: Doxyfile
doxygen/html/: AbstractFactory_8h_source.html  ActiveItem_8h_source.html  Animation_8h_source.html  Bomb_8h_source.html  Clock_8h_source.html  CollectableItem_8h_source.html  CompetingHiker_8h_source.html  Enemy_8h_source.html  EntityFactory_8h_source.html  Entity_8h_source.html  FinishLine_8h_source.html  Game_8h_source.html  GroundPlot_8h_source.html  Hiker_8h_source.html  MovingEnemy_8h_source.html  Observable_8h_source.html  Observer_8h_source.html  PassiveItem_8h_source.html  Player_8h_source.html  Position2D_8h_source.html  Random_8h_source.html  SFMLActiveItem_8h_source.html  SFMLBomb_8h_source.html  SFMLCompetingHiker_8h_source.html  SFMLEntity_8h_source.html  SFMLFinishLine_8h_source.html  SFMLGroundPlot_8h_source.html  SFMLMovingEnemy_8h_source.html  SFMLPassiveItem_8h_source.html  SFMLPlayer_8h_source.html  SFMLStaticEnemy_8h_source.html  SFMLWorld_8h_source.html  Score_8h_source.html  StaticEnemy_8h_source.html  Transformation_8h_source.html  World_8h_source.html  annotated.html  classSFML_1_1Animation-members.html  classSFML_1_1Animation.html  classSFML_1_1EntityFactory-members.html  (+316 more)
doxygen/latex/: annotated.tex  classSFML_1_1Animation.tex  classSFML_1_1EntityFactory.tex  classSFML_1_1EntityFactory__inherit__graph.md5  classSFML_1_1SFMLActiveItem.tex  classSFML_1_1SFMLActiveItem__coll__graph.md5  classSFML_1_1SFMLActiveItem__inherit__graph.md5  classSFML_1_1SFMLBomb.tex  classSFML_1_1SFMLBomb__coll__graph.md5  classSFML_1_1SFMLBomb__inherit__graph.md5  classSFML_1_1SFMLCompetingHiker.tex  classSFML_1_1SFMLCompetingHiker__coll__graph.md5  classSFML_1_1SFMLCompetingHiker__inherit__graph.md5  classSFML_1_1SFMLEntity.tex  classSFML_1_1SFMLEntity__inherit__graph.md5  classSFML_1_1SFMLFinishLine.tex  classSFML_1_1SFMLFinishLine__coll__graph.md5  classSFML_1_1SFMLFinishLine__inherit__graph.md5  classSFML_1_1SFMLGame.tex  classSFML_1_1SFMLGroundPlot.tex  classSFML_1_1SFMLGroundPlot__coll__graph.md5  classSFML_1_1SFMLGroundPlot__inherit__graph.md5  classSFML_1_1SFMLMovingEnemy.tex  (+89 more)
src/: CMakeLists.txt  main.cpp
src/logic-lib/AbstractFactory/: AbstractFactory.h  EntityFactory.cpp  EntityFactory.h
src/logic-lib/Clock/: Clock.cpp  Clock.h
src/logic-lib/Entity/: ActiveItem.cpp  ActiveItem.h  Bomb.cpp  Bomb.h  CollectableItem.cpp  CollectableItem.h  CompetingHiker.cpp  CompetingHiker.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  FinishLine.cpp  FinishLine.h  GroundPlot.cpp  GroundPlot.h  Hiker.cpp  Hiker.h  MovingEnemy.cpp  MovingEnemy.h  MovingHiker.cpp  MovingHiker.h  PassiveItem.cpp  PassiveItem.h  Player.cpp  Player.h  StaticEnemy.cpp  StaticEnemy.h  World.cpp  World.h  player.h
src/logic-lib/EventHandler/: EventHandler.cpp  EventHandler.h
src/logic-lib/Observer/: Observable.cpp  Observable.h  Observer.h
src/logic-lib/Position/: Position2D.cpp  Position2D.h
src/logic-lib/Random/: Random.cpp  Random.h
src/logic-lib/Score/: Score.cpp  Score.h
src/presentation-lib/Animation/: Animation.cpp  Animation.h
src/presentation-lib/EntityFactory/: EntityFactory.cpp  EntityFactory.h
src/presentation-lib/EventHandler/: EventHandler.h
src/presentation-lib/Game/: Game.cpp  Game.h
src/presentation-lib/SFMLEntities/: SFMLActiveItem.cpp  SFMLActiveItem.h  SFMLBomb.cpp  SFMLBomb.h  SFMLCompetingHiker.cpp  SFMLCompetingHiker.h  SFMLEntity.cpp  SFMLEntity.h  SFMLFinishLine.cpp  SFMLFinishLine.h  SFMLGroundPlot.cpp  SFMLGroundPlot.h  SFMLMovingEnemy.cpp  SFMLMovingEnemy.h  SFMLPassiveItem.cpp  SFMLPassiveItem.h  SFMLPlayer.cpp  SFMLPlayer.h  SFMLStaticEnemy.cpp  SFMLStaticEnemy.h  SFMLWorld.cpp  SFMLWorld.h
src/presentation-lib/Transformation/: Transformation.cpp  Transformation.h
(+68 files in other folders)
